# file_diff-rs

./: .README.md.swp  .gitignore  Cargo.toml  LICENSE  README.md
src/: .lib.rs.swp  lib.rs
testdata/: c_hello_copy  rust_hello
