[package]

name = "file_diff"
version = "1.0.0"
authors = ["Ethan Pailes <ethanpailes@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ethanpailes/file_diff-rs"
homepage = "https://github.com/ethanpailes/file_diff-rs"
keywords = ["diff", "testing", "test", "file"]
license = "BSD-3-Clause"
description = "An atomic utility for diffing files in testing"
